--- a/.github/workflows/test-robot-framework.yml
+++ b/.github/workflows/test-robot-framework.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
 
     steps:
     - name: Checkout
@@ -14,6 +14,7 @@ jobs:
       uses: joonvena/robotframework-docker-action@v1.0
       with:
         robot_reports_dir: 'reports'
+        robot_tests_dir: 'testing-pipe'
       
     - name: Upload test results
       uses: actions/upload-artifact@v2
