--- a/.github/workflows/test-robot-framework.yml
+++ b/.github/workflows/test-robot-framework.yml
@@ -20,6 +20,6 @@ jobs:
       if: always()
       with:
         name: robot-reports
-        path: reports
+        path: robot_tests/reports
 
         
