--- a/.github/workflows/test-robot-framework.yml
+++ b/.github/workflows/test-robot-framework.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Robot Framework
       uses: joonvena/robotframework-docker-action@v1.0
       with:
-        robot_reports_dir: 'reports'
+        robot_reports_dir: 'robot_tests/reports'
       
     - name: Upload test results
       uses: actions/upload-artifact@v2
