--- a/.github/workflows/test-robot-framework.yml
+++ b/.github/workflows/test-robot-framework.yml
@@ -3,7 +3,7 @@ name: Testes com Robot Framework e SeleniumLibrary
 on: [push, pull_request]
 
 jobs:
-  test:
+  test-apis:
     runs-on: ubuntu-latest  
 
     steps:
@@ -14,12 +14,33 @@ jobs:
       uses: joonvena/robotframework-docker-action@v1.0
       with:
         robot_reports_dir: 'robot_tests/reports'
+        robot_tests_dir: 'robot/tests/api'
       
     - name: Upload test results
       uses: actions/upload-artifact@v2
       if: always()
       with:
         name: robot-reports
+        path: robot_tests/reports
+
+  test-interfaces:
+    runs-on: ubuntu-latest  
+    needs: test-apis
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: Robot Framework
+      uses: joonvena/robotframework-docker-action@v1.0
+      with:
+        robot_reports_dir: 'robot_tests/reports'
+        robot_tests_dir: 'robot/tests/interface'
+      
+    - name: Upload test results
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: robot-reports-interfaces
         path: robot_tests/reports
 
         
