--- a/.github/workflows/test-robot-framework.yml
+++ b/.github/workflows/test-robot-framework.yml
@@ -14,7 +14,7 @@ jobs:
       uses: joonvena/robotframework-docker-action@v1.0
       with:
         robot_reports_dir: 'robot_tests/reports'
-        robot_tests_dir: 'robot/tests/api'
+        robot_tests_dir: 'robot_tests/api'
       
     - name: Upload test results
       uses: actions/upload-artifact@v2
@@ -34,7 +34,7 @@ jobs:
       uses: joonvena/robotframework-docker-action@v1.0
       with:
         robot_reports_dir: 'robot_tests/reports'
-        robot_tests_dir: 'robot/tests/interface'
+        robot_tests_dir: 'robot_tests/interface'
       
     - name: Upload test results
       uses: actions/upload-artifact@v2
